--- a/app/src/main/res/menu/top_menu_bar.xml
+++ b/app/src/main/res/menu/top_menu_bar.xml
@@ -3,7 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:background="@android:color/transparent"
-   >
+    tools:showIn="navigation_view">
+
+    <group
+        android:checkableBehavior="single"
+        >
 
     <item
         android:id="@+id/menu_upcoming"
@@ -18,17 +22,11 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/holder1"
-        android:title=""
-        app:showAsAction="always"
-        android:enabled="false"
-        />
-
-    <item
         android:id="@+id/menu_favorites"
-        android:icon="@drawable/ic_favorite"
+        android:icon="@drawable/ic_favorite_full"
         android:title="@string/Favorites"
         app:showAsAction="always" />
+
 
     <item
         android:id="@+id/menu_profile"
@@ -39,10 +37,29 @@
 
 
 
+<!--    <item-->
+<!--        android:id="@+id/rates"-->
+<!--        android:title="@string/Rates"-->
+<!--        android:icon="@drawable/ic_rates"-->
+<!--        app:showAsAction="always"-->
+<!--        android:enabled="false"-->
+<!--        />-->
 
+    <item
+        android:id="@+id/menu_settings"
+        android:title="@string/Settings"
+        android:icon="@drawable/ic_settings"
+        app:showAsAction="always"
+        />
 
+    <item
+        android:id="@+id/menu_logout"
+        android:title="@string/LogOut"
+        android:icon="@drawable/ic_logout"
+        app:showAsAction="always"
+        />
 
-
+    </group>
 
 
 </menu>
