--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="mainGreen">#4B9226 </color>
+    <color name="menuGreen">#A2BF8F  </color>
+    <color name="selectedMenuGreen">#C7DFB7 </color>
+    <color name="grey">#808080 </color>
 </resources>
