--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/img_background"
-    tools:context=".ActivitySplash">
+    tools:context=".LoginActivity">
 
 
     <ImageView
@@ -15,17 +15,25 @@
         android:layout_centerInParent="true"
         android:src="@drawable/ic_logo" />
 
-
-    <TextView
-        android:id="@+id/splash_LBL_Android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:layout_marginBottom="25dp"
-        android:fontFamily="cursive"
-        android:text="Android Developer"
-        android:textColor="@color/white"
-        android:textSize="30sp" />
+        android:background="#4B9226"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/sign_in_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+
 
 </RelativeLayout>
+
