--- a/app/src/main/res/layout/layout_navigation_header.xml
+++ b/app/src/main/res/layout/layout_navigation_header.xml
@@ -33,7 +33,7 @@
             android:clickable="true"
             android:scaleType="centerCrop"
             android:src="@drawable/img_profile_pic"
-            app:civ_border_color="#B2000000"
+            app:civ_border_color="@color/mainGreen"
             app:civ_border_width="3dp" />
 
 
@@ -56,7 +56,9 @@
         android:layout_below="@+id/profile_FRM_nav"
         android:layout_centerHorizontal="true"
         android:paddingTop="8dp"
-        android:text="My Name Is"
+        android:fontFamily="@font/roboto_bold"
+        android:textColor="@color/mainGreen"
+        android:text="@string/userName"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="18sp"
