--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -75,7 +75,8 @@
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@drawable/ic_person" />
+                    android:src="@drawable/ic_person"
+                    app:tint="@color/mainGreen"/>
 
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="0dp"
@@ -122,7 +123,8 @@
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@drawable/ic_person" />
+                    android:src="@drawable/ic_person"
+                    app:tint="@color/mainGreen"/>
 
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="0dp"
@@ -168,7 +170,8 @@
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@drawable/ic_email" />
+                    android:src="@drawable/ic_email"
+                    app:tint="@color/mainGreen"/>
 
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="0dp"
@@ -215,7 +218,8 @@
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@drawable/ic_calender" />
+                    android:src="@drawable/ic_calender"
+                    app:tint="@color/mainGreen" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="0dp"
@@ -263,7 +267,8 @@
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@drawable/ic_gender" />
+                    android:src="@drawable/ic_gender"
+                    app:tint="@color/mainGreen"/>
 
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="0dp"
