--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,12 @@
 
 
         <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:liftOnScroll="true">
 
-            <com.google.android.material.appbar.MaterialToolbar
+        <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/main_Toolbar_Top"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
@@ -29,9 +30,12 @@
                 app:navigationIcon="@drawable/ic_menu"
                 app:navigationIconTint="@color/white"
                 app:title= "@string/Upcoming"
-                app:titleTextColor="@color/white"
+                app:titleTextColor="@color/white">
 
-                />
+        </com.google.android.material.appbar.MaterialToolbar>
+
+
+
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.fragment.app.FragmentContainerView
