--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -42,7 +42,13 @@
     </LinearLayout>
 
 
-
+    <ImageView
+        android:id="@+id/EditProfile_IMG_Icon"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="?actionBarSize"
+        android:src="@drawable/ic_logo" />
 
     <ScrollView
         android:id="@+id/EditProfile_Scroll_EditProfilePage"
@@ -55,14 +61,10 @@
             android:id="@+id/EditProfile_Layout_EditProfilePage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="180dp"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/EditProfile_IMG_Icon"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_logo" />
+
 
             <LinearLayout
                 android:id="@+id/EditProfile_TopProfile"
