--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -5,10 +5,35 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.HistoryFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+<RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/History_IMG_Icon"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/ic_logo" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/History_RecyclerView_Trips"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="500dp"
+        android:layout_below="@+id/History_IMG_Icon"
+        android:clipToPadding="true"
+        android:scrollbars="vertical" />
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_below="@+id/History_RecyclerView_Trips">
+        </View>
+
+
+
+</RelativeLayout>
 
 </FrameLayout>
