--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,9 +6,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.ProfileFragment">
 
+    <ImageView
+        android:id="@+id/Profile_IMG_Icon"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="top|center"
+        android:src="@drawable/ic_logo" />
+
+
+
 <ScrollView
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginTop="200dp"
+    >
+
+
 
         <LinearLayout
             android:id="@+id/Profile_ProfilePage"
@@ -16,12 +29,6 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/Profile_IMG_Icon"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_logo" />
 
             <LinearLayout
                 android:id="@+id/Profile_TopProfile"
@@ -335,5 +342,6 @@
 
 
 </ScrollView>
+
 
 </FrameLayout>
