--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,7 +15,7 @@
 
 
 
-<ScrollView
+<androidx.core.widget.NestedScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="200dp"
@@ -341,7 +341,7 @@
         </LinearLayout>
 
 
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
 
 
 </FrameLayout>
