--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -4,42 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileEditActivity"
+    tools:context=".Activities.ProfileEditActivity"
     android:background="@color/white">
 
-
-    <LinearLayout
-        android:id="@+id/EditProfile_TopAppBar"
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:background="@color/mainGreen"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingStart="15dp"
-        android:paddingEnd="15dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:background="@color/mainGreen">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/EditProfile_IMG_Back"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:backgroundTint="@color/mainGreen"
-            app:icon="@drawable/ic_arrow_back"
-            app:iconGravity="textStart"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/EditProfile_toolBar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/mainGreen"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
+            app:navigationIcon="@drawable/ic_arrow_back"
+            app:navigationIconTint="@color/white"
+            app:title= "@string/editProfile"
+            app:titleTextColor="@color/white"
+
             />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/EditProfile_TextTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:text="@string/editProfile"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:fontFamily="@font/roboto"/>
+    </com.google.android.material.appbar.AppBarLayout>
 
-    </LinearLayout>
 
 
     <ImageView
@@ -50,20 +37,21 @@
         android:layout_marginTop="?actionBarSize"
         android:src="@drawable/ic_logo" />
 
-    <ScrollView
-        android:id="@+id/EditProfile_Scroll_EditProfilePage"
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/EditProfile_ScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/EditProfile_TopAppBar">
+        android:layout_marginBottom="20dp"
+        android:clipToPadding="false"
+        android:paddingBottom="20dp"
+        android:layout_below="@+id/EditProfile_IMG_Icon">
 
 
         <LinearLayout
             android:id="@+id/EditProfile_Layout_EditProfilePage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="180dp"
             android:orientation="vertical">
-
 
 
             <LinearLayout
@@ -366,69 +354,65 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
+                    android:drawableLeft="@drawable/ic_gender"
+                    android:drawablePadding="15dp"
+                    android:drawableTint="@color/menuGreen"
+                    android:fontFamily="@font/roboto"
                     android:text="Gender :"
                     android:textColor="@color/menuGreen"
                     android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/roboto"
-                    android:drawableLeft="@drawable/ic_gender"
-                    android:drawableTint="@color/menuGreen"
-                    android:drawablePadding="15dp"/>
+                    android:textStyle="bold" />
 
                 <RadioGroup
                     android:id="@+id/EditProfile_RG_Gender"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    >
+                    android:orientation="horizontal">
 
                     <RadioButton
                         android:id="@+id/radioMale"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Male"
-                        android:fontFamily="@font/roboto"
-                        android:textSize="16sp"
                         android:layout_marginStart="10dp"
-                        android:textColor="@color/menuGreen"
                         android:buttonTint="@color/menuGreen"
-                        />
+                        android:fontFamily="@font/roboto"
+                        android:text="Male"
+                        android:textColor="@color/menuGreen"
+                        android:textSize="16sp" />
 
                     <RadioButton
                         android:id="@+id/radioFemale"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Female"
-                        android:fontFamily="@font/roboto"
-                        android:textSize="16sp"
-                        android:textColor="@color/menuGreen"
                         android:layout_marginStart="8dp"
                         android:buttonTint="@color/menuGreen"
-                        />
+                        android:fontFamily="@font/roboto"
+                        android:text="Female"
+                        android:textColor="@color/menuGreen"
+                        android:textSize="16sp" />
 
                 </RadioGroup>
 
 
-
-<!--                <Switch-->
-<!--                    android:id="@+id/EditProfile_simpleSwitch_Gender"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginStart="15dp"-->
-<!--                    android:checked="true"-->
-<!--                    android:drawableStart="@drawable/ic_gender"-->
-<!--                    android:drawablePadding="15dp"-->
-<!--                    android:drawableTint="@color/menuGreen"-->
-<!--                    android:fontFamily="@font/roboto"-->
-<!--                    android:text="@string/gender"-->
-<!--                    android:textColor="@color/menuGreen"-->
-<!--                    android:textColorHint="@color/menuGreen"-->
-<!--                    android:textIsSelectable="true"-->
-<!--                    android:textOff="Male"-->
-<!--                    android:textOn="Female"-->
-<!--                    android:textSize="16sp"-->
-<!--                    android:thumbTint="@color/menuGreen"-->
-<!--                    android:trackTint="@color/selectedMenuGreen" />-->
+                <!--                <Switch-->
+                <!--                    android:id="@+id/EditProfile_simpleSwitch_Gender"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_marginStart="15dp"-->
+                <!--                    android:checked="true"-->
+                <!--                    android:drawableStart="@drawable/ic_gender"-->
+                <!--                    android:drawablePadding="15dp"-->
+                <!--                    android:drawableTint="@color/menuGreen"-->
+                <!--                    android:fontFamily="@font/roboto"-->
+                <!--                    android:text="@string/gender"-->
+                <!--                    android:textColor="@color/menuGreen"-->
+                <!--                    android:textColorHint="@color/menuGreen"-->
+                <!--                    android:textIsSelectable="true"-->
+                <!--                    android:textOff="Male"-->
+                <!--                    android:textOn="Female"-->
+                <!--                    android:textSize="16sp"-->
+                <!--                    android:thumbTint="@color/menuGreen"-->
+                <!--                    android:trackTint="@color/selectedMenuGreen" />-->
 
 
             </LinearLayout>
@@ -460,7 +444,7 @@
 
         </LinearLayout>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 
 
