--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/img_background"
-    tools:context=".ActivitySplash">
+    tools:context=".Activities.SplashActivity">
 
 
     <ImageView
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:translationY="-1600dp"
         android:src="@drawable/ic_logo" />
 
 
@@ -26,6 +27,7 @@
         android:fontFamily="cursive"
         android:text="Android Developer"
         android:textColor="@color/white"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:translationY="700dp"/>
 
 </RelativeLayout>
