--- a/app/src/main/res/layout/fragment_upcomings.xml
+++ b/app/src/main/res/layout/fragment_upcomings.xml
@@ -5,10 +5,27 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.UpcomingFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/Upcoming_IMG_Icon"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/ic_logo" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/Upcoming_RecyclerView_Trips"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/Upcoming_IMG_Icon"
+            android:layout_marginBottom="0dp"
+            android:clipToPadding="false"
+            android:paddingBottom="75dp"
+            android:scrollbars="vertical" />
+
+    </RelativeLayout>
 </FrameLayout>
