--- a/app/src/main/res/layout/activity_create_new_trip.xml
+++ b/app/src/main/res/layout/activity_create_new_trip.xml
@@ -10,7 +10,9 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:background="@color/mainGreen">
+        android:background="@color/mainGreen"
+        app:liftOnScroll="true"
+        >
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/CreateTrip_toolBar"
@@ -22,6 +24,7 @@
             app:navigationIconTint="@color/white"
             app:title= "@string/createNewTrip"
             app:titleTextColor="@color/white"
+
 
             />
 
@@ -134,7 +137,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="200dp"
+                android:layout_marginTop="260dp"
                 android:layout_marginEnd="32dp"
                 android:backgroundTint="@color/mainGreen"
                 android:fontFamily="@font/roboto_bold"
